style tweaks to fix docked nav on mobile

--- a/njwfish/static/style.css
+++ b/njwfish/static/style.css
@@ -150,6 +150,12 @@ h4 {
   padding-bottom: 40px;
 }
 
+.containernav {
+  width: 900px;
+  max-width: 85%;
+  margin: auto;
+}
+
 .header {
   margin-top: 30px;
   margin-bottom: 30px;
@@ -243,7 +249,7 @@ h4 {
     border-bottom: 1px solid #eee; }
   .navbar-spacer {
     display: none; }
-  .navbar > .container {
+  .navbar > .containernav {
     width: 100%; }
   .navbar-list {
     list-style: none;
@@ -270,8 +276,10 @@ h4 {
   .has-docked-nav .navbar-spacer {
     display: block; }
   /* Re-overiding the width 100% declaration to match size of % based container */
-  .has-docked-nav .navbar > .container {
-    width: 80%; }
+  .has-docked-nav .navbar > .containernav {
+      width: 900px;
+  max-width: 85%;
+  margin: auto; }
 
   /* Popover */
   .popover.open {
